CRUD de usuarios con autenticacion y autorizacion jwt

--- a/backend-challenge/appsettings.json
+++ b/backend-challenge/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=SHIFTA-0103\\SQLEXPRESS;Database=challenge-db;Trusted_Connection=False;User=julianodev;Password=123456;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "SecretKey": "secret"
+  }
 }
