CRUD de usuarios con roles terminado

--- a/backend-challenge/appsettings.json
+++ b/backend-challenge/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=SHIFTA-0103\\SQLEXPRESS;Database=challenge-db;Trusted_Connection=False;User=julianodev;Password=123456;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "workstation id=challenge-db.mssql.somee.com;packet size=4096;user id=JulianoDev_SQLLogin_1;pwd=enwy1t5rn2;data source=challenge-db.mssql.somee.com;persist security info=False;initial catalog=challenge-db"
   },
   "Jwt": {
     "SecretKey": "secret"
