Add repository pattern and unit of work

--- a/backend-challenge.WebApi/appsettings.json
+++ b/backend-challenge.WebApi/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=SHIFTA-0103\\SQLEXPRESS;Database=challenge-db;Trusted_Connection=False;User=julianodev;Password=123456;TrustServerCertificate=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=sql.bsite.net\\MSSQL2016;Database=julianodev_challengedb;Trusted_Connection=False;User=julianodev_challengedb;Password=Shifter23@;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=SHIFTA-0103\\SQLEXPRESS;Database=challenge-db;Trusted_Connection=False;User=julianodev;Password=123456;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=sql.bsite.net\\MSSQL2016;Database=julianodev_challengedb;Trusted_Connection=False;User=julianodev_challengedb;Password=Shifter23@;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
     "SecretKey": "secret"
